--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 Superhero Files
 </title>
 </head>
-<body background="https://image.freepik.com/free-vector/blue-black-halftoned-dots-background_1164-1025.jpg">
-<image src="C:\Users\shaur\Desktop\ShaShock\YouTube\The Superhero Files.PNG>
+<body background="blue-black-halftoned-dots-background_1164-1025.jpg">
+<image src="The Superhero Files.PNG>
+
+            </html>
