--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ Superhero Files
 </title>
 </head>
 <body background="blue-black-halftoned-dots-background_1164-1025.jpg">
-<image src="The Superhero Files.PNG>
+<img src="The Superhero Files.PNG>
 aa
 </html>
