--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <title>
-Superhero Files
+ShaShock.com
 </title>
 </head>
-<body background="blue-black-halftoned-dots-background_1164-1025.jpg">
-<img src="The Superhero Files.PNG>
-aa
-</html>
+<body { style="color:white" } background="blue-black-halftoned-dots-background_1164-1025.jpg">
+<img src="The Superhero FIles.PNG" style margin="50%">
+</body>
+<html>
