--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ ShaShock.com
 </title>
 </head>
 <body { style="color:white" } background="blue-black-halftoned-dots-background_1164-1025.jpg">
-<img src="The Superhero FIles.PNG" style margin="50%">
+<img src="The Superhero FIles.PNG" { style margin:"50%"; }>
+  </img>
 </body>
 <html>
