--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@ ShaShock.com
 </title>
 </head>
 <body { style="color:white" } background="blue-black-halftoned-dots-background_1164-1025.jpg">
-<img src="TheSuperheroStudio.PNG" { style margin:"50%"; }>
+<center>
+  <img src="TheSuperheroStudio.PNG">
   </img>
+  </center>
 </body>
 <html>
